--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             font-size: x-small;
             opacity: 0.5;
             text-align: right;
-            padding: 20px;
+            padding: 10px;
         }
         nav ul {
             list-style-type: none;
@@ -124,13 +124,13 @@
         </ul>
     </nav>
     
-    <a href="http://your-signup-link.com" class="signup-button">Join us</a>
+    <a href="https://github.com/mengnankkkk/SkyMirror/tree/main" class="signup-button">Join us</a>
 </div>
 
 <div class="content">
     <div id="header">
         <div class="logo">
-            <pre style="font:1em 'andale mono', 'lucida console', 'Courier New'"><b>
+            <pre style="font:1.2em 'andale mono', 'lucida console', 'Courier New'"><b>
 <font color="#ffffff">       _____ _          __  __ _                      </font>
 <font color="#dddddd">     / ____| |        |  \/  (_)                     </font>
 <font color="#bbbbbb">   | (___ | | ___   _| \  / |_ _ __ _ __ ___  _ __  </font>
