--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 10px 40px 25px 40px; /* 调整顶部的padding */
+            padding: 10px 40px 25px 40px; /* Adjusted top padding */
         }
         #content {
-            height: 630px; /* 调整内容区域的高度 */
+            height: 630px; /* Adjusted content area height */
             flex-grow: 1;
         }
         #footer {
@@ -67,13 +67,13 @@
             text-decoration: none;
         }
         .logo pre {
-            font-size: 1.2em; /* 增加 logo 的字体大小 */
-            margin-bottom: 10px; /* 增加底部的margin */
+            font-size: 1.2em; /* Increased logo font size */
+            margin-bottom: 10px; /* Added bottom margin */
         }
         .picture {
-            width: 120px; /* 调整大小以适应原有logo的大小 */
+            width: 120px; /* Adjusted size to fit original logo */
             height: 120px;
-            background-image: url('logo.jpg'); /* 确保路径正确 */
+            background-image: url('logo.jpg'); /* Ensure correct path */
             background-size: cover;
             background-position: center;
             border-radius: 50%;
@@ -87,12 +87,8 @@
                 transform: rotate(360deg);
             }
         }
-        .logo-icon {
-            width: 50px;
-            height: 50px;
-        }
         .signup-button {
-            background-color: #003366; /* 深蓝色背景 */
+            background-color: #003366; /* Dark blue background */
             color: white;
             text-align: center;
             padding: 10px;
