--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -42,10 +42,10 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 10px 40px 25px 40px; /* Adjusted top padding */
+            padding: 10px 40px 25px 40px; /* 调整顶部的padding */
         }
         #content {
-            height: 630px; /* Adjusted content area height */
+            height: 630px;
             flex-grow: 1;
         }
         #footer {
@@ -67,13 +67,13 @@
             text-decoration: none;
         }
         .logo pre {
-            font-size: 1.2em; /* Increased logo font size */
-            margin-bottom: 10px; /* Added bottom margin */
+            font-size: 1em;
+            margin-bottom: 10px; /* 增加底部的margin */
         }
         .picture {
-            width: 120px; /* Adjusted size to fit original logo */
+            width: 120px; /* 调整大小以适应原有logo的大小 */
             height: 120px;
-            background-image: url('logo.jpg'); /* Ensure correct path */
+            background-image: url('logo.jpg'); /* 确保路径正确 */
             background-size: cover;
             background-position: center;
             border-radius: 50%;
@@ -88,7 +88,7 @@
             }
         }
         .signup-button {
-            background-color: #003366; /* Dark blue background */
+            background-color: #003366; /* 深蓝色背景 */
             color: white;
             text-align: center;
             padding: 10px;
@@ -130,7 +130,7 @@
         <ul>
             <li><a href="photo/index.html" class="link" cmd="cat photos.txt" style="color: #bbbbbb;"><i class="fas fa-camera"></i> Photos</a></li>
             <li><a href="message/index.html" class="link" cmd="cat messages.txt" style="color: #cccccc;"><i class="fas fa-envelope"></i> Messages</a></li>
-            <li><a href="member/index.html" class="link" cmd="cat members.txt" style="color: #dddddd;"><i class="fas fa-phone"></i> member</a></li>
+            <li><a href="#" class="link" cmd="cat number.txt" style="color: #dddddd;"><i class="fas fa-phone"></i> member</a></li>
             <li><a href="https://github.com/mengnankkkk" class="link" cmd="cat github.txt" style="color: #eeeeee;"><i class="fab fa-github"></i> GitHub</a></li>
             <li><a href="#" class="link" cmd="cat .help" style="color: #ffffff;"><i class="fas fa-question"></i> Help</a></li>
             <li><a href="#" class="link" cmd="cat .version" style="color: #ffffff;"><i class="fas fa-code"></i> contact</a></li>
