--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
             background-position: center;
             border-radius: 50%;
             animation: run 12s linear infinite;
+             /* 调节百分比 */
+            margin-top: -3%;
+            
+            
         }
         @keyframes run {
             from {
@@ -130,7 +134,7 @@
         <ul>
             <li><a href="photo/index.html" class="link" cmd="cat photos.txt" style="color: #bbbbbb;"><i class="fas fa-camera"></i> Photos</a></li>
             <li><a href="message/index.html" class="link" cmd="cat messages.txt" style="color: #cccccc;"><i class="fas fa-envelope"></i> Messages</a></li>
-            <li><a href="#" class="link" cmd="cat number.txt" style="color: #dddddd;"><i class="fas fa-phone"></i> member</a></li>
+            <li><a href="member/index.html" class="link" cmd="cat number.txt" style="color: #dddddd;"><i class="fas fa-phone"></i> member</a></li>
             <li><a href="https://github.com/mengnankkkk" class="link" cmd="cat github.txt" style="color: #eeeeee;"><i class="fab fa-github"></i> GitHub</a></li>
             <li><a href="#" class="link" cmd="cat .help" style="color: #ffffff;"><i class="fas fa-question"></i> Help</a></li>
             <li><a href="#" class="link" cmd="cat .version" style="color: #ffffff;"><i class="fas fa-code"></i> contact</a></li>
