--- a/photo/index.html
+++ b/photo/index.html
@@ -19,10 +19,10 @@
   <div id="wrapper">
     <!-- Header -->
     <header id="header">
-      <h1><a href="https://github.com/realwds"><strong>Alejandro</strong> </a></h1>
+      <h1><a href="https://github.com/mengnankkkk"><strong>Alejandro</strong> </a></h1>
       <nav>
         <ul>
-          <li><a href="https://github.com/realwds" class="">返回主页</a></li>
+          <li><a href="#s" class="">返回主页</a></li>
           <li><a href="#footer" class="icon solid fa-info-circle">关于</a></li>
         </ul>
       </nav>
@@ -40,13 +40,13 @@
           </section>
           <section>
             <ul class="icons">
-              <li><a href="https://gitee.com/wrongcode" class="icon brands fa-github" target="_blank"><span
+              <li><a href="https://github.com/mengnankkkk" class="icon brands fa-github" target="_blank"><span
                     class="label">Gitee</span></a></li>
-              <li><a href="https://github.com/realwds" class="icon brands fa-github" target="_blank"><span
+              <li><a href="https://github.com/yucale830/" class="icon brands fa-github" target="_blank"><span
                     class="label">GitHub</span></a></li>
             </ul>
           </section>
-          <p class="copyright"> &copy; 2020 <a href="https://github.com/realwds">YOYLING &middot; Alejandro</a> . </p>
+          <p class="copyright"> &copy; 2020 <a href="https://github.com/mengnankkkk">YOYLING &middot; Alejandro</a> . </p>
         </div>
         <div>
           <section>
