--- a/member/index.html
+++ b/member/index.html
@@ -192,61 +192,61 @@
 
 <body>
   <div class="navbar">
-    <a href="ip" class="home-icon"></a> <!-- 添加home-icon类 -->
+    <a href="../index.html" class="home-icon"></a> <!-- 添加home-icon类 -->
   </div>
   <div class="container">
     <div class="card">
       <div class="photo">
-        <img src="https://img2.baidu.com/it/u=1320503866,3680575511&fm=253&fmt=auto&app=138&f=JPEG?w=300&h=442">
+        <img src="./img/Anz.jpg">
       </div>
-      <h1>马云 Jack Ma</h1>
+      <h1>Anz</h1>
       <h2>阿里巴巴 alibaba.com</h2>
       <p>马云，男，汉族，中共党员，1964年9月10日生于浙江省杭州市，祖籍浙江省嵊州市谷来镇。</p>
       <a href="#">了解更多</a>
     </div>
     <div class="card">
       <div class="photo">
-        <img src="https://img0.baidu.com/it/u=3180381019,318788837&fm=253&fmt=auto&app=120&f=JPEG?w=747&h=500">
+        <img src="./img/Charmersix.jpg">
       </div>
-      <h1>马化腾 Pony</h1>
+      <h1>Charmersix</h1>
       <h2>腾讯 tencent.com</h2>
       <p>马化腾，汉族，1971年10月29日生于广东省东方县八所港，广东省汕头市潮南区人。</p>
       <a href="#">了解更多</a>
     </div>
     <div class="card">
       <div class="photo">
-        <img src="https://img2.baidu.com/it/u=2674451603,1425023713&fm=253&fmt=auto&app=138&f=JPEG?w=857&h=500">
+        <img src="./img/eXVtaW5n.jpg">
       </div>
-      <h1>刘强东 Richard Liu</h1>
+      <h1>eXVtaW5n</h1>
       <h2>京东 jd.com</h2>
       <p>刘强东，男，汉族，1973年3月10日生（另一说法：1974年2月14日），江苏宿迁人，祖籍湖南湘潭。</p>
       <a href="#">了解更多</a>
     </div>
     <div class="card">
         <div class="photo">
-          <img src="https://img2.baidu.com/it/u=2674451603,1425023713&fm=253&fmt=auto&app=138&f=JPEG?w=857&h=500">
+          <img src="./img/Kangsir.jpg">
         </div>
-        <h1>刘强东 Richard Liu</h1>
+        <h1>Kangsir</h1>
         <h2>京东 jd.com</h2>
         <p>刘强东，男，汉族，1973年3月10日生（另一说法：1974年2月14日），江苏宿迁人，祖籍湖南湘潭。</p>
         <a href="#">了解更多</a>
       </div>
     <div class="card">
         <div class="photo">
-          <img src="https://img2.baidu.com/it/u=2674451603,1425023713&fm=253&fmt=auto&app=138&f=JPEG?w=857&h=500">
+          <img src="./img/Scofield_Lee.jpg">
         </div>
-        <h1>刘强东 Richard Liu</h1>
+        <h1>Scofield_Lee/h1>
         <h2>京东 jd.com</h2>
         <p>刘强东，男，汉族，1973年3月10日生（另一说法：1974年2月14日），江苏宿迁人，祖籍湖南湘潭。</p>
         <a href="#">了解更多</a>
       </div>
       <div class="card">
         <div class="photo">
-          <img src="https://img2.baidu.com/it/u=2674451603,1425023713&fm=253&fmt=auto&app=138&f=JPEG?w=857&h=500">
+          <img src="./img/Wanan.jpg">
         </div>
-        <h1>刘强东 Richard Liu</h1>
-        <h2>京东 jd.com</h2>
-        <p>刘强东，男，汉族，1973年3月10日生（另一说法：1974年2月14日），江苏宿迁人，祖籍湖南湘潭。</p>
+        <h1>Wanan</h1>
+        <h2>jieshao</h2>
+        <p>jieshqo</p>
         <a href="#">了解更多</a>
       </div>
     <div class="card">
