--- a/photo/index.html
+++ b/photo/index.html
@@ -1,113 +1,73 @@
-<!DOCTYPE html>
 <html>
-
 <head>
-  <title>照片展示</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/gh/616620131/photo-page-for-typecho@2.0/Multiverse/css/main.css" />
-  <link rel="icon" type="image/x-icon" href="https://imgbed.mengnankk.asia/202407101803086.jpg">
-  <noscript>
-    <link rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/616620131/photo-page-for-typecho@2.0/Multiverse/css/noscript.css" />
-  </noscript>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
+    <link rel="stylesheet" href="./text.css">
+    <script src="./test.js"></script>
+    <title>照片</title>
 </head>
+<main>
+	<div id="gallery">
+		<figure>
+			<img src="./IMG_20240708_175100.jpg">
+			<figcaption>8 PM, Summer</figcaption>
+		</figure>
+		<figure>
+			<div>
+				<div>
+					<h2>Note</h2>
+					<p>Scroll Animation!</p>
+					<p><br><small>Related work : <br><a target="_blank" href="https://codepen.io/wakana-k/pen/oNJxbPw">Hover animation version</a></small></p>
+				</div>
+			</div>
+		</figure>
+		<figure>
+			<img src="./IMG_20240708_195947.jpg">
+			<figcaption>3 PM, Winter</figcaption>
+		</figure>
+		<figure>
+			<img src="./IMG_20240708_200104.jpg">
+			<figcaption>10 AM, Summer Storm</figcaption>
+		</figure>
+		<figure>
+			<img src="./IMG_20240708_200314.jpg">
+			<figcaption>5 PM, Autumn</figcaption>
+		</figure>
+		<figure>
+			<img src="./IMG_20240708_200213.jpg">
+			<figcaption>7 PM, Spring</figcaption>
+		</figure>
+		<figure>
+			<img src="./IMG_20240708_200138.jpg">
+			<figcaption>6:30 AM, Summer</figcaption>
+		</figure>
+		<figure>
+			<img src='./IMG_20240708_191425.jpg' alt='clouds and sky during daytime' title="Photo by Diego PH for Unsplash">
+			<figcaption>6 PM, Autumn</figcaption>
+		</figure>
+		<figure>
+			<img src="https://images.unsplash.com/photo-1589517628174-5698bcf47311?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2OTMyOTk4MTd8&ixlib=rb-4.0.3&q=100&w=500" alt="white clouds and blue sky. " title="Photo by Carlos Kenobi for Unsplash">
+			<figcaption>5 PM, Summer</figcaption>
+		</figure>
+		<figure>
+			<img src="https://images.unsplash.com/photo-1509803874385-db7c23652552?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2OTMzMDAwMDh8&ixlib=rb-4.0.3&q=100&w=500" alt="cloudy sky. " title="Photo by Alex Machado for Unsplash">
+			<figcaption>11 AM, Summer</figcaption>
+		</figure>
+		<figure>
+			<img src="https://images.unsplash.com/photo-1563846465145-c733e29ee0f8?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2OTMzMDA5MDV8&ixlib=rb-4.0.3&q=100&w=500" alt="rainbow during daytime. " title="Photo by Yulia Gadalina for Unsplash">
+			<figcaption>2 PM, Spring Rainbow</figcaption>
+		</figure>
+		<figure>
+			<img src="https://images.unsplash.com/photo-1542272201-b1ca555f8505?ixlib=rb-4.0.3&q=100&w=jpg&crop=entropy&cs=srgb&w=500" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>4 PM, Autumn</figcaption>
+		</figure>
+	</div>
+</main>
 
-<body class="is-preload">
-  <!-- Wrapper -->
-  <div id="wrapper">
-    <!-- Header -->
-    <header id="header">
-      <h1><a href="https://github.com/mengnankkkk"><strong>Alejandro</strong> </a></h1>
-      <nav>
-        <ul>
-          <li><a href="#s" class="">返回主页</a></li>
-          <li><a href="#footer" class="icon solid fa-info-circle">关于</a></li>
-        </ul>
-      </nav>
-    </header>
-    <!-- Main -->
-    <div id="main">
-    </div>
-    <!-- Footer -->
-    <footer id="footer" class="panel">
-      <div class="inner split">
-        <div>
-          <section>
-            <h2>控制台</h2>
-            <p>Alejandro相册共有<span id="count_CN"></span>张图片哦，人生的每一帧都值得记录。</p>
-          </section>
-          <section>
-            <ul class="icons">
-              <li><a href="https://github.com/mengnankkkk" class="icon brands fa-github" target="_blank"><span
-                    class="label">Gitee</span></a></li>
-              <li><a href="https://github.com/yucale830/" class="icon brands fa-github" target="_blank"><span
-                    class="label">GitHub</span></a></li>
-            </ul>
-          </section>
-          <p class="copyright"> &copy; 2020 <a href="https://github.com/mengnankkkk">YOYLING &middot; Alejandro</a> . </p>
-        </div>
-        <div>
-          <section>
-            <h2>关于Alejandro</h2>
-            <p>不是每个人都能成为摄影师，但好的摄影作品可以出自任何人。<br />我最喜欢摄影中你无法预期的下一刻。</p>
-          </section>
-        </div>
-      </div>
-    </footer>
-  </div>
-  <script type="text/javascript">
-    var datas = `沙雕,2018年07月21日拍摄,https://n.sinaimg.cn/tech/transform/427/w178h249/20201120/f0fa-kefmpha9628164.gif
-沙雕,2018年07月21日拍摄,https://n.sinaimg.cn/tech/transform/427/w178h249/20201120/f0fa-kefmpha9628164.gif
-沙雕,2018年07月21日拍摄,https://n.sinaimg.cn/tech/transform/427/w178h249/20201120/f0fa-kefmpha9628164.gif
-沙雕,2018年07月21日拍摄,https://n.sinaimg.cn/tech/transform/427/w178h249/20201120/f0fa-kefmpha9628164.gif
-沙雕,2018年07月21日拍摄,https://n.sinaimg.cn/tech/transform/427/w178h249/20201120/f0fa-kefmpha9628164.gif
-沙雕,2018年07月21日拍摄,https://n.sinaimg.cn/tech/transform/427/w178h249/20201120/f0fa-kefmpha9628164.gif
-沙雕,2018年07月21日拍摄,https://n.sinaimg.cn/tech/transform/427/w178h249/20201120/f0fa-kefmpha9628164.gif
-沙雕,2018年07月21日拍摄,https://n.sinaimg.cn/tech/transform/427/w178h249/20201120/f0fa-kefmpha9628164.gif
-沙雕,2018年07月21日拍摄,https://n.sinaimg.cn/tech/transform/427/w178h249/20201120/f0fa-kefmpha9628164.gif
-沙雕,2018年07月21日拍摄,https://n.sinaimg.cn/tech/transform/427/w178h249/20201120/f0fa-kefmpha9628164.gif
-沙雕,2018年07月21日拍摄,https://n.sinaimg.cn/tech/transform/427/w178h249/20201120/f0fa-kefmpha9628164.gif
-沙雕,2018年07月21日拍摄,https://n.sinaimg.cn/tech/transform/427/w178h249/20201120/f0fa-kefmpha9628164.gif`;
-    datas = datas.split("\n");
-    for (var i = 0; i < datas.length; i++) {
-      datas[i] = datas[i].split(",");
-    }
-
-    function creatArticle(datas) {
-      var parent = document.getElementById("main");
-      for (var i = 0; i < datas.length; i++) {
-        var article = document.createElement("article");
-        article.className = "thumb";
-        parent.appendChild(article);
-        var a = document.createElement("a");
-        a.className = "image";
-        a.href = datas[i][2];
-        article.appendChild(a);
-        var img = document.createElement("img");
-        img.src = datas[i][2]; // + "?x-oss-process=image/resize,w_640/quality,q_85"
-        a.appendChild(img);
-        var h2 = document.createElement("h2");
-        h2.innerHTML = datas[i][0];
-        article.appendChild(h2);
-        var p = document.createElement("p");
-        p.innerHTML = datas[i][1];
-        article.appendChild(p);
-      }
-    }
-    creatArticle(datas);
-    document.getElementById("count_CN").innerHTML = datas.length;
-  </script>
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/gh/616620131/photo-page-for-typecho@2.0/Multiverse/js/jquery.min.js"></script>
-  <script
-    src="https://cdn.jsdelivr.net/gh/616620131/photo-page-for-typecho@2.0/Multiverse/js/jquery.poptrox.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/616620131/photo-page-for-typecho@2.0/Multiverse/js/browser.min.js"></script>
-  <script
-    src="https://cdn.jsdelivr.net/gh/616620131/photo-page-for-typecho@2.0/Multiverse/js/breakpoints.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/616620131/photo-page-for-typecho@2.0/Multiverse/js/util.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/616620131/photo-page-for-typecho@2.0/Multiverse/js/main.js"></script>
-</body>
-
+<footer id='info'>Codepen by <a target="_blank" href="../index.html">SkyMirror</a></footer>
 </html>
