--- a/member/index.html
+++ b/member/index.html
@@ -208,10 +208,10 @@
       <div class="photo">
         <img src="./img/Charmersix.jpg">
       </div>
-      <h1>Charmersix</h1>
-      <h2>腾讯 tencent.com</h2>
-      <p>马化腾，汉族，1971年10月29日生于广东省东方县八所港，广东省汕头市潮南区人。</p>
-      <a href="#">了解更多</a>
+      <h1>Charmerisx</h1>
+      <h2>charmersix.icu</h2>
+      <p>21级老登</p>
+      <a href="http://charmersix.icu">了解更多</a>
     </div>
     <div class="card">
       <div class="photo">
@@ -235,7 +235,7 @@
         <div class="photo">
           <img src="./img/Scofield_Lee.jpg">
         </div>
-        <h1>Scofield_Lee/h1>
+        <h1>Scofield_Lee</h1>
         <h2>京东 jd.com</h2>
         <p>刘强东，男，汉族，1973年3月10日生（另一说法：1974年2月14日），江苏宿迁人，祖籍湖南湘潭。</p>
         <a href="#">了解更多</a>
@@ -251,12 +251,84 @@
       </div>
     <div class="card">
         <div class="photo">
-          <img src="https://img2.baidu.com/it/u=2674451603,1425023713&fm=253&fmt=auto&app=138&f=JPEG?w=857&h=500">
+          <img src="./img/mengnankk.jpg">
         </div>
-        <h1>刘强东 Richard Liu</h1>
-        <h2>京东 jd.com</h2>
-        <p>刘强东，男，汉族，1973年3月10日生（另一说法：1974年2月14日），江苏宿迁人，祖籍湖南湘潭。</p>
-        <a href="#">了解更多</a>
+        <h1>mengnankk</h1>
+        <h2>mengnankk.asia</h2>
+        <p>菜鸡一个</p>
+        <a href="https://home.mengnankk.asia">了解更多</a>
+      </div>
+      <div class="card">
+        <div class="photo">
+          <img src="./img/yucale.jpg">
+        <</div>
+        <h1>yucale</h1>
+        <h2>yucale.wiki</h2>
+        <p>23级嘿嘿嘿嘿嘿</p>
+        <a href="https://yucale.wiki/">了解更多</a>
+      </div>
+      <div class="card">
+        <div class="photo">
+          <img src="./img/css0k.jpg">
+        </div>
+        <h1>css0k</h1>
+        <h2>charmersix.icu</h2>
+        <p>21级老登</p>
+        <a href="http://charmersix.icu">了解更多</a>
+      </div>
+      <div class="card">
+        <div class="photo">
+          <img src="./img/daybr3ak.jpg">
+        </div>
+        <h1>daybr3ak</h1>
+        <h2>charmersix.icu</h2>
+        <p>21级老登</p>
+        <a href="http://charmersix.icu">了解更多</a>
+      </div>
+      <div class="card">
+        <div class="photo">
+          <img src="./img/Kiss_me.jpg">
+        </div>
+        <h1>Kiss_me</h1>
+        <h2>charmersix.icu</h2>
+        <p>21级老登</p>
+        <a href="http://charmersix.icu">了解更多</a>
+      </div>
+      <div class="card">
+        <div class="photo">
+          <img src="./img/GaGa.jpg">
+        </div>
+        <h1>GaGa</h1>
+        <h2>charmersix.icu</h2>
+        <p>21级老登</p>
+        <a href="http://charmersix.icu">了解更多</a>
+      </div>
+      <div class="card">
+        <div class="photo">
+          <img src="./img/iris.jpg">
+        </div>
+        <h1>iris</h1>
+        <h2>charmersix.icu</h2>
+        <p>21级老登</p>
+        <a href="http://charmersix.icu">了解更多</a>
+      </div>
+      <div class="card">
+        <div class="photo">
+          <img src="./img/Ghbbhc.jpg">
+        </div>
+        <h1>Charmerisx</h1>
+        <h2>charmersix.icu</h2>
+        <p>21级老登</p>
+        <a href="http://charmersix.icu">了解更多</a>
+      </div>
+      <div class="card">
+        <div class="photo">
+          <img src="./img/Charmersix.jpg">
+        </div>
+        <h1>Charmerisx</h1>
+        <h2>charmersix.icu</h2>
+        <p>21级老登</p>
+        <a href="http://charmersix.icu">了解更多</a>
       </div>  <!-- Additional cards go here -->
   </div>
 </body>
