--- a/photo/index.html
+++ b/photo/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
     <link rel="stylesheet" href="./text.css">
     <script src="./test.js"></script>
-    <title>照片</title>
+    <title>获奖-日常</title>
 </head>
 <main>
 	<div id="gallery">
