--- a/contact/index.html
+++ b/contact/index.html
@@ -17,42 +17,45 @@
 	<script src="js/html5.js"></script>
 <![endif]-->
 	<style>
-		.image-container {
-			text-align: center;
-			margin-top: 20px;
-		}
+		img {
+  --s: 300px; /* image size */
+  
+  width: var(--s);
+  aspect-ratio: 1;
+  padding: calc(.09*var(--s)) calc(var(--s)/2 - var(--_p));
+  box-sizing: border-box;
+  object-fit: cover;
+  border-image: 
+    radial-gradient(#e5414e 69%,#0000 70%) 
+    84.5%/calc(var(--s)/2)/0 var(--_p);
+  clip-path: polygon(
+    calc(-41% - var(--_p)) 0,
+    calc(50%  - var(--_p)) 91%,
+    calc(50%  + var(--_p)) 91%,
+    calc(141% + var(--_p)) 0);
+  transition: .5s;
+  cursor: pointer;
+  --_p: 0px;
+}
+img:hover {
+  --_p: calc(var(--s)/2);
+}
 
-		.image-container img {
-			border: 5px solid transparent;
-			border-radius: 15px;
-		}
 
-		.image-description {
-			margin-top: 10px;
-			font-family: Arial, sans-serif;
-			font-size: 16px;
-			color: #333;
-		}
+body {
+  margin: 0;
+  min-height: 100vh;
+  display: grid;
+  place-content: center;
+  background: #f9ffb4;
+  filter: drop-shadow(0 0 10px #cc333f)
+}
 	</style>
 </head>
 
 <body>
-	<div class="container demo-2">
-		<div class="content">
-			<div id="large-header" class="large-header">
-				<canvas id="demo-canvas"></canvas>
-				<h1 class="main-title">QQ群号：945059084</h1>
-				
-				<div class="image-container">
-					<img src="https://imgbed.mengnankk.asia/202407101852641.jpg" alt="Description of the image">
-					<div class="image-description">This is the description of the image.</div>
-				</div>
-				
-			</div>
-		</div><!-- /content -->
-	</div><!-- /container -->
-	<script src="js/rAF.js"></script>
-	<script src="js/demo-2.js"></script>
+	<h1>快来加入我们吧！！！</h1>
+	<img src="./qq.png"  alt="a random girl">
 </body>
 
 </html>
