--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
             <li><a href="photo/index.html" class="link" cmd="cat photos.txt" style="color: #bbbbbb;"><i class="fas fa-camera"></i> Photos</a></li>
             <li><a href="message/index.html" class="link" cmd="cat messages.txt" style="color: #cccccc;"><i class="fas fa-envelope"></i> Messages</a></li>
             <li><a href="member/index.html" class="link" cmd="cat number.txt" style="color: #dddddd;"><i class="fas fa-phone"></i> member</a></li>
-            <li><a href="https://github.com/mengnankkkk" class="link" cmd="cat github.txt" style="color: #eeeeee;"><i class="fab fa-github"></i> GitHub</a></li>
-            <li><a href="#" class="link" cmd="cat .help" style="color: #ffffff;"><i class="fas fa-question"></i> Help</a></li>
+            <li><a href="https://github.com/mengnankkkk/SkyMirror" class="link" cmd="cat github.txt" style="color: #eeeeee;"><i class="fab fa-github"></i> GitHub</a></li>
+            <li><a href="https://mengnankk.asia/Message/" class="link" cmd="cat .help" style="color: #ffffff;"><i class="fas fa-question"></i> Help</a></li>
             <li><a href="contact/index.html" class="link" cmd="cat .version" style="color: #ffffff;"><i class="fas fa-code"></i> contact</a></li>
             <li><a href="#" class="link" cmd="cat .flag" id="flag">Flag</a></li>
         </ul>
