--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </ul>
     </nav>
     
-    <a href="https://github.com/mengnankkkk/SkyMirror/tree/main" class="signup-button">Join us</a>
+    <a href="./contact/index.html" class="signup-button">Join us</a>
 </div>
 
 <div class="content">
@@ -167,7 +167,7 @@
     </div>
 
     <div id="footer" class="footer">
-        Design by Aethoce. Inspired by <a href="http://shellphish.net/">ShellPhish</a>. XKCD CLI by <a href="http://chromakode.com">Chromakode</a>. <a href="http://github.com/chromakode/xkcdfools">Source code</a>.
+        Design by Aethoce. Inspired by <a href="https://github.com/mengnankkkk/SkyMirror">SkyMirror</a>
     </div>
 </div>
 
