--- a/photo/index.html
+++ b/photo/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
     <link rel="stylesheet" href="./text.css">
     <script src="./test.js"></script>
-    <title>获奖-日常</title>
+    <title>获奖&&日常</title>
 </head>
 <main>
 	<div id="gallery">
@@ -20,51 +20,91 @@
 		<figure>
 			<div>
 				<div>
-					<h2>Note</h2>
-					<p>Scroll Animation!</p>
-					<p><br><small>Related work : <br><a target="_blank" href="https://codepen.io/wakana-k/pen/oNJxbPw">Hover animation version</a></small></p>
+					<h2>奖项和比赛</h2>
+					<p>时光!</p>
+					<p><br><small>☺ : <br><a target="_blank" href="../index.html">Back index</a></small></p>
 				</div>
 			</div>
 		</figure>
 		<figure>
 			<img src="./IMG_20240708_195947.jpg">
-			<figcaption>3 PM, Winter</figcaption>
+			<figcaption>奖项</figcaption>
 		</figure>
 		<figure>
 			<img src="./IMG_20240708_200104.jpg">
-			<figcaption>10 AM, Summer Storm</figcaption>
+			<figcaption>奖项</figcaption>
 		</figure>
 		<figure>
 			<img src="./IMG_20240708_200314.jpg">
-			<figcaption>5 PM, Autumn</figcaption>
+			<figcaption>奖项</figcaption>
 		</figure>
 		<figure>
 			<img src="./IMG_20240708_200213.jpg">
-			<figcaption>7 PM, Spring</figcaption>
+			<figcaption>奖项</figcaption>
 		</figure>
 		<figure>
 			<img src="./IMG_20240708_200138.jpg">
-			<figcaption>6:30 AM, Summer</figcaption>
+			<figcaption>奖项</figcaption>
 		</figure>
 		<figure>
 			<img src='./IMG_20240708_191425.jpg' alt='clouds and sky during daytime' title="Photo by Diego PH for Unsplash">
-			<figcaption>6 PM, Autumn</figcaption>
+			<figcaption>奖项</figcaption>
 		</figure>
 		<figure>
-			<img src="https://images.unsplash.com/photo-1589517628174-5698bcf47311?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2OTMyOTk4MTd8&ixlib=rb-4.0.3&q=100&w=500" alt="white clouds and blue sky. " title="Photo by Carlos Kenobi for Unsplash">
-			<figcaption>5 PM, Summer</figcaption>
+			<img src="./微信图片_20240720154453.jpg" alt="white clouds and blue sky. " title="Photo by Carlos Kenobi for Unsplash">
+			<figcaption>in Nanjing</figcaption>
 		</figure>
 		<figure>
-			<img src="https://images.unsplash.com/photo-1509803874385-db7c23652552?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2OTMzMDAwMDh8&ixlib=rb-4.0.3&q=100&w=500" alt="cloudy sky. " title="Photo by Alex Machado for Unsplash">
-			<figcaption>11 AM, Summer</figcaption>
+			<img src="./微信图片_20240720154508.jpg" alt="cloudy sky. " title="Photo by Alex Machado for Unsplash">
+			<figcaption>in Nanjing</figcaption>
 		</figure>
 		<figure>
-			<img src="https://images.unsplash.com/photo-1563846465145-c733e29ee0f8?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2OTMzMDA5MDV8&ixlib=rb-4.0.3&q=100&w=500" alt="rainbow during daytime. " title="Photo by Yulia Gadalina for Unsplash">
-			<figcaption>2 PM, Spring Rainbow</figcaption>
+			<img src="./微信图片_20240720154513.jpg" alt="rainbow during daytime. " title="Photo by Yulia Gadalina for Unsplash">
+			<figcaption>in Nanjing</figcaption>
 		</figure>
 		<figure>
-			<img src="https://images.unsplash.com/photo-1542272201-b1ca555f8505?ixlib=rb-4.0.3&q=100&w=jpg&crop=entropy&cs=srgb&w=500" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
-			<figcaption>4 PM, Autumn</figcaption>
+			<img src="./微信图片_20240720154517.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Nanjing</figcaption>
+		</figure>
+		<figure>
+			<img src="./微信图片_20240720154521.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Nanjing</figcaption>
+		</figure>
+		<figure>
+			<img src="./微信图片_20240720154525.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Nanjing</figcaption>
+		</figure>
+		<figure>
+			<img src="./微信图片_20240720154933.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Nanjing</figcaption>
+		</figure>
+		<figure>
+			<img src="./微信图片_20240720154935.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Nanjing</figcaption>
+		</figure>
+		<figure>
+			<img src="./微信图片_20240720154938.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Nanjing</figcaption>
+		</figure>
+		<figure>
+			<img src="./微信图片_20240720155706.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Jinan</figcaption>
+		</figure>
+		<figure>
+			<img src="./微信图片_20240720155709.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Jinan</figcaption>
+		</figure>
+		<figure>
+			<img src="./微信图片_20240720155927.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Jinan</figcaption>
+		</figure>
+		<figure>
+			<img src="./微信图片_20240720155931.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Jinan</figcaption>
+		</figure>
+		<figure>
+			<img src="./微信图片_20240720155927.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Jinan</figcaption>
 		</figure>
 	</div>
 </main>
