--- a/photo/index.html
+++ b/photo/index.html
@@ -15,7 +15,7 @@
 	<div id="gallery">
 		<figure>
 			<img src="./IMG_20240708_175100.jpg">
-			<figcaption>8 PM, Summer</figcaption>
+			<figcaption>奖项</figcaption>
 		</figure>
 		<figure>
 			<div>
