--- a/photo/index.html
+++ b/photo/index.html
@@ -106,6 +106,18 @@
 			<img src="./微信图片_20240720155927.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Jinan</figcaption>
 		</figure>
+		<figure>
+			<img src="./QQ图片20240720160548.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Wuhan</figcaption>
+		</figure>
+		<figure>
+			<img src="./QQ图片20240720160545.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Wuhan</figcaption>
+		</figure>
+		<figure>
+			<img src="./QQ图片20240720160532.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Wuhan</figcaption>
+		</figure>
 	</div>
 </main>
 
