--- a/photo/index.html
+++ b/photo/index.html
@@ -118,6 +118,31 @@
 			<img src="./QQ图片20240720160532.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
 			<figcaption>in Wuhan</figcaption>
 		</figure>
+		<figure>
+			<img src="./QQ图片20240720161754.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Nanjing</figcaption>
+		</figure>
+		<figure>
+			<img src="./QQ图片20240720161800.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Beijing</figcaption>
+		</figure>
+		<figure>
+			<img src="./QQ图片20240720161804.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>Beijing</figcaption>
+		</figure>
+		<figure>
+			<img src="./QQ图片20240720161807.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>Beijing</figcaption>
+		</figure>
+		<figure>
+			<img src="./QQ图片20240720161810.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Tianjin</figcaption>
+		</figure>
+		<figure>
+			<img src="./QQ图片20240720161812.jpg" alt="white sea of clouds. " title="Photo by Szabo Viktor for Unsplash">
+			<figcaption>in Hefei</figcaption>
+		</figure>
+		
 	</div>
 </main>
 
