--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="screen.css" type="text/css">
     <link rel="icon" type="image/x-icon" href="https://imgbed.mengnankk.asia/202407101803086.jpg">
+    <link rel="stylesheet" href="navbar.css" type="text/css">
+    <script src="js.js"></script>
     <style type="text/css">
         body {
             font-family: 'Courier New', monospace;
@@ -168,6 +170,7 @@
 
 
 </div>
+
 
 <script type="text/javascript">
     var _gaq = _gaq || [];
