--- a/photo/index.html
+++ b/photo/index.html
@@ -134,6 +134,26 @@
                 <img src="https://imgbed.mengnankk.asia/202407201715669.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
                 <figcaption>in Hefei</figcaption>
             </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407210955746.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Hefei</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407210955503.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Fujian</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407210955748.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Hefei</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407210955504.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Nanjing</figcaption>
+            </figure>
+            <figure>
+                <img src="https://imgbed.mengnankk.asia/202407210955505.jpg" alt="云海" title="Photo by Szabo Viktor for Unsplash">
+                <figcaption>in Nanjing</figcaption>
+            </figure>
         </div>
     </main>
     <footer id='info'>Codepen by <a target="_blank" href="../index.html">SkyMirror</a></footer>
