--- a/member/index.html
+++ b/member/index.html
@@ -195,6 +195,17 @@
     <a href="../index.html" class="home-icon"></a> <!-- 添加home-icon类 -->
   </div>
   <div class="container">
+    
+    <div class="card">
+      <div class="photo">
+        <img src="./img/xinyuan.jpg" alt="xinyuan">
+      </div>
+      <h1>css0k</h1>
+      <h2>https://websec.space</h2>
+      <p></p>
+      <a href="https://websec.space">了解更多</a>
+    </div>
+    
     <div class="card">
       <div class="photo">
         <img src="./img/Wanan.jpg" alt="Wanan">
